plugins {
    id "java"
    id "application"
    id "com.gradleup.shadow" version "9.4.1"
    id "org.beryx.jlink" version "3.1.5"
    id "org.openjfx.javafxplugin" version "bf3c04dd64"
}

group "com.mystic"
version "3.0.0"

java.toolchain.languageVersion = JavaLanguageVersion.of(26)

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
}

application {
    mainClass = "com.mystic.tarotboard.TarotBoard"
    applicationDefaultJvmArgs = [
        '--enable-native-access=javafx.graphics',
        '--enable-native-access=javafx.web'
    ]
}

repositories {
    mavenCentral()
}

javafx {
    version = "27-ea+15"
    modules = ["javafx.controls", "javafx.fxml", "javafx.graphics", "javafx.swing", "javafx.web", "jdk.jsobject"]
}

dependencies {
    implementation "com.vladsch.flexmark:flexmark-all:0.64.8"
    implementation "com.google.code.gson:gson:2.10.1" // Added Gson dependency
}

jlink {
    imageZip = layout.buildDirectory.get().file("distributions/app-${javafx.platform.classifier}.zip").asFile
    options = ["--strip-debug", "--compress", "2", "--no-header-files", "--no-man-pages"]
    launcher {
        name = "app"
    }
}

jlinkZip {
    group = "distribution"
}

shadowJar {
    manifest.attributes("Main-Class": "com.mystic.tarotboard.Launcher")
}

jar {
    manifest.attributes("Main-Class": "com.mystic.tarotboard.Launcher")
}